--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.testawal">
 
+<!--    slider artikel-->
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestAwal">
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
         <activity
             android:name=".Registrasi"
             android:exported="true" />
