--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.testawal">
+    <!-- slider artikel -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-<!--    slider artikel-->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TestAwal">
+        android:theme="@style/Theme.TestAwal"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".LaundryHome"
+            android:exported="true" />
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
