20221114 - menambahkan search, icon, merapikan UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.TestAwal"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".LaundryMain"
+            android:exported="true" />
+        <activity
             android:name=".HomeLaundryList"
             android:exported="true" />
         <activity
