--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         android:theme="@style/Theme.TestAwal"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".LaundryTransaction"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".OrderProcess"
             android:exported="true" />
         <activity
