--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:theme="@style/Theme.TestAwal"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Artikel"
+            android:exported="true" />
+        <activity
+            android:name=".ArtikelLima"
+            android:exported="true" />
+        <activity
+            android:name=".ArtikelEmpat"
+            android:exported="true" />
+        <activity
+            android:name=".ArtikelTiga"
+            android:exported="true" />
+        <activity
+            android:name=".ArtikelDua"
+            android:exported="true" />
+        <activity
+            android:name=".ArtikelSatu"
+            android:exported="true" />
+        <activity
             android:name=".LaundryTransaction"
             android:exported="false">
             <meta-data
