--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestAwal"
         android:usesCleartextTraffic="true">
+
+        <activity
+            android:name=".SettingActivity">
+        </activity>
         <activity
             android:name=".Setting"
             android:exported="false">
